Handles Program restriction upon registrations