@@ -5,6 +5,7 @@ import com.example.panacea.dto.AuthenticationResponse;
 import com.example.panacea.dto.RegisterRequest;
 import com.example.panacea.enums.Belt;
 import com.example.panacea.enums.Gender;
+import com.example.panacea.enums.MemberStatus;
 import com.example.panacea.enums.Role;
 import com.example.panacea.exceptions.*;
 import com.example.panacea.models.Member;
@@ -21,12 +22,10 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.sql.Date;
 import java.time.LocalDate;
-import java.util.HashSet;
+import java.time.Period;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
@@ -39,103 +38,69 @@ public class AuthService {
     private final ProgramRepository programRepository;
     private final StripeService stripeService;
 
-    @Transactional
-    public AuthenticationResponse register(RegisterRequest request) throws StripeException {
 
-        if (memberRepository.findByEmail(request.getEmail()).isPresent()) {
-            throw new EmailAlreadyExistsException("Email already registered: " + request.getEmail());
-        }
-
-        List<Long> allRequestedProgramIds = request.getStudents().stream()
-                .flatMap(s -> s.getProgramIds().stream())
-                .distinct()
-                .toList();
-
-        List<Program> existingPrograms = programRepository.findAllById(allRequestedProgramIds);
-        List<Long> existingProgramIds = existingPrograms.stream()
-                .map(Program::getId)
-                .toList();
-
-        List<Long> missingIds = allRequestedProgramIds.stream()
-                .filter(id -> !existingProgramIds.contains(id))
-                .toList();
-
-        if (!missingIds.isEmpty()) {
-            throw new ProgramNotFoundException("Invalid program IDs: " + missingIds);
-        }
-
-        Set<String> uniqueStudentKeys = new HashSet<>();
-        boolean hasDuplicateStudents = request.getStudents().stream()
-                .anyMatch(s -> !uniqueStudentKeys.add(
-                        s.getName().toLowerCase().trim() + "-" + s.getDob()
-                ));
-
-        if (hasDuplicateStudents) {
-            throw new DuplicateStudentException("Duplicate student detected. Each student (by name and DOB) must be unique within the registration.");
-        }
-
+    public AuthenticationResponse register(RegisterRequest request) {
         List<Student> students = request.getStudents().stream().map(s -> {
-            List<Program> studentPrograms = programRepository.findAllById(s.getProgramIds());
+            List<Program> programs = programRepository.findAllById(s.getProgramIds());
 
-            Gender gender;
-            Belt belt;
-            try {
-                gender = Gender.valueOf(s.getGender().toUpperCase());
-            } catch (IllegalArgumentException e) {
-                throw new IllegalArgumentException("Invalid gender: " + s.getGender() + ". Allowed: MALE, FEMALE");
-            }
+            LocalDate dob = s.getDob();
+            int age = Period.between(dob, LocalDate.now()).getYears();
+            Belt studentBelt = Belt.valueOf(s.getBelt().toUpperCase());
+            LocalDate registeredAt = LocalDate.now();
 
-            try {
-                belt = Belt.valueOf(s.getBelt().toUpperCase());
-            } catch (IllegalArgumentException e) {
-                throw new IllegalArgumentException("Invalid belt: " + s.getBelt() + ". Allowed belts: WHITE, YELLOW, etc.");
-            }
+            for (Program program : programs) {
+                if (program.getEnrolledStudents().size() >= program.getCapacity()) {
+                    throw new NoProgramSpaceException("Program is full: " + program.getName());
+                }
 
-            if (s.getProgramIds().size() > 5) {
-                throw new TooManyProgramsException("Student " + s.getName() + " cannot be enrolled in more than 5 programs.");
+                if (age < program.getMinAge()) {
+                    throw new ProgramRequirementNotMetException("Student is too young for program: " + program.getName());
+                }
+
+                if (studentBelt.getRank() < program.getMinBelt().getRank()) {
+                    throw new ProgramRequirementNotMetException("Student belt too low for program: " + program.getName());
+                }
+
+                int yearsInClub = Period.between(registeredAt, LocalDate.now()).getYears(); // 0 initially
+                if (yearsInClub < program.getMinYearsInClub()) {
+                    throw new ProgramRequirementNotMetException("Student lacks experience for program: " + program.getName());
+                }
             }
 
             return Student.builder()
                     .name(s.getName())
-                    .dob(Date.valueOf(s.getDob()).toLocalDate())
+                    .dob(dob)
                     .weight(s.getWeight())
                     .height(s.getHeight())
                     .medicalConcerns(s.getMedicalConcerns())
-                    .gender(gender)
-                    .belt(belt)
-                    .programs(studentPrograms)
-                    .registeredAt(LocalDate.now())
+                    .gender(Gender.valueOf(s.getGender()))
+                    .belt(studentBelt)
+                    .registeredAt(registeredAt)
+                    .programs(programs)
                     .build();
-        }).collect(Collectors.toList());
-
+        }).toList();
 
         Member member = Member.builder()
                 .name(request.getName())
                 .lastName(request.getLastName())
                 .email(request.getEmail())
                 .password(passwordEncoder.encode(request.getPassword()))
-                .dob(Date.valueOf(request.getBirthDate()))
+                .dob(request.getBirthDate())
                 .phone(request.getPhone())
                 .address(request.getAddress())
                 .city(request.getCity())
                 .postalCode(request.getPostalCode())
                 .role(Role.USER)
+                .status(MemberStatus.ACTIVE)
                 .students(students)
                 .build();
 
-        String stripeCustomerId;
-        try {
-            stripeCustomerId = stripeService.createCustomer(
-                    request.getName() + " " + request.getLastName(),
-                    request.getEmail()
-            );
-        } catch (StripeException e) {
-            throw new StripeIntegrationException("Stripe customer creation failed: " + e.getMessage());
-        }
-
-        member.setStripeCustomerId(stripeCustomerId);
         students.forEach(student -> student.setMember(member));
 
+        memberRepository.save(member);
+
+        String stripeCustomerId = stripeService.createCustomer(member);
+        member.setStripeCustomerId(stripeCustomerId);
         memberRepository.save(member);
 
         var jwtToken = jwtService.generateToken(member);
@@ -143,6 +108,8 @@ public class AuthService {
                 .token(jwtToken)
                 .build();
     }
+
+
 
     public AuthenticationResponse authenticate(AuthenticationRequest request) {
         authenticationManager.authenticate(
